# Chill_zone

./: .env  Cargo.toml  README.md  Rocket.toml
Data/: DATA  DATA.sqlite
config/: cert.pem  key.pem
src/: authenticator.rs  main.rs  music_manager.rs  upload_song_api.rs  user_manager.rs
static/front_end/listen/: index.html  script.js  style.css
static/front_end/log_in/: index.html  log_in.css  log_in.js
static/front_end/main/: index.css  index.html  index.js
static/front_end/sign_up/: index.html  sign_up.css  sign_up.js
static/front_end/upload/: index.html  scripts.js  upload.css
