[package]
name = "chill_zone_rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json","tls","secrets"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
sqlx = "0.7"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
